html file updated and empty javascript files added

--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,37 @@
 <html>
 
 <head>
-  <title>UniManager Application</title>
-  <link rel="stylesheet" href="/stylesheets/style.css">
+  <title>Rock, Paper, Scissors game</title>
+  <link rel="stylesheet" href="./stylesheets/style.css">
+  <script src="./javascripts/p5.min.js"></script>
+  <script src="./javascripts/renderers/card.js"></script>
+  <script src="./javascripts/renderers/board.js"></script>
+  <script src="./javascripts/requests/roomRequests.js"></script>
+  <script src="./javascripts/managers/boardManager.js"></script>
+  <script src="./javascripts/gamelib.js"></script>
 </head>
 
 <body>
-  <h1>UniManager Portal</h1>
-  <p>This portal will manage classes for students and teachers.</p>
+  <header>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/67/Rock-paper-scissors.svg/330px-Rock-paper-scissors.svg.png" alt="rock paper scissors chart">
+    <section>
+      <h1> Rock, Paper, Scissors</h1>
+      <h3> A simple game for everyone</h3>
+    </section>
+  </header>
+  <nav>
+     <a href="https://en.wikipedia.org/wiki/Rock_paper_scissors"> Wiki of the game</a>
+     <a href="https://www.rpsgame.org/">Another game of Rock,Paper, Scissors</a>
+  </nav>
+  <main id="game">
+  </main>
+  <footer>
+    <p>Made by Sheehan Sunil</p>
+  </footer>
 </body>
-
+<!--
+  <a href="https://www.flaticon.com/free-icons/rock" title="rock icons">Rock icons created by Icongeek26 - Flaticon</a>
+  <a href="https://www.flaticon.com/free-icons/blank-paper" title="blank paper icons">Blank paper icons created by JunGSa - Flaticon</a>
+  <a href="https://www.flaticon.com/free-icons/scissors" title="scissors icons">Scissors icons created by BomSymbols - Flaticon</a>
+-->
 </html>
